# esp32-ws2812-example

./: .gitignore  README.md  TODOS.md  partitions.csv  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  effect_manager.c  effect_manager.h  idf_component.yml  led_effects.c  led_effects.h  led_strip_example_main.c  main.c  spiffs_manager.c  spiffs_manager.h  web_server.c  web_server.h  wifi_manager.c  wifi_manager.h
memory-bank/: 0-projectBrief.md  1-techContext.md
web/: build-single-file.js  index.html  package-lock.json  package.json  rollup.config.js  tsconfig.json
web/src/: index.tsx  styles.css  utils.ts
